activate account via email

--- a/AgentApplication/agent/src/main/resources/application.properties
+++ b/AgentApplication/agent/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.password=lozinka
 
 spring.application.name=agent
 server.port=8600
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = health.care.clinic.psw@gmail.com
+spring.mail.password = password123!@#
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
