--- a/AgentApplication/agent/src/main/resources/application.properties
+++ b/AgentApplication/agent/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.mail.username = health.care.clinic.psw@gmail.com
 spring.mail.password = password123!@#
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable = true
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-type=jks
+server.ssl.key-store-password=password
+server.ssl.key-alias=keystore
