--- a/AgentApplication/front/agent-app/angular.json
+++ b/AgentApplication/front/agent-app/angular.json
@@ -67,6 +67,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": true,
+            "sslKey": "src/certificate/thatisuday.key",
+            "sslCert": "src/certificate/thatisuday.crt"
+          },
           "configurations": {
             "production": {
               "browserTarget": "agent-app:build:production"
