--- a/front/dislinkt/angular.json
+++ b/front/dislinkt/angular.json
@@ -69,7 +69,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "latest-angular:build",
-            "port": 4300
+            "port": 4300,
+            "ssl": true,
+            "sslKey": "src/certificate/client.key",
+            "sslCert": "src/certificate/client.crt"
           },
           "configurations": {
             "production": {
