--- a/front/dislinkt/angular.json
+++ b/front/dislinkt/angular.json
@@ -111,5 +111,8 @@
       }
     }
   },
-  "defaultProject": "dislinkt"
+  "defaultProject": "dislinkt",
+  "cli": {
+    "analytics": false
+  }
 }
