--- a/AgentApplication/agent/pom.xml
+++ b/AgentApplication/agent/pom.xml
@@ -64,7 +64,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.15</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
