--- a/AgentApplication/agent/src/main/resources/application.properties
+++ b/AgentApplication/agent/src/main/resources/application.properties
@@ -13,7 +13,8 @@ server.port=8600
 
 spring.mail.host = smtp.gmail.com
 spring.mail.username = health.care.clinic.psw@gmail.com
-spring.mail.password = password123!@#
+#spring.mail.password = password123!@#
+spring.mail.password = mrpksolhizwuprgj
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable = true
 
@@ -22,3 +23,6 @@ server.ssl.key-store=classpath:keystore.jks
 server.ssl.key-store-type=jks
 server.ssl.key-store-password=password
 server.ssl.key-alias=keystore
+
+#trust.store=classpath:keystore/keystore.jks
+#trust.store.password=password
