--- a/AgentApplication/front/agent-app/package.json
+++ b/AgentApplication/front/agent-app/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "owasp": "owasp-dependency-check --project \"agent-app\" -f HTML"
   },
   "private": true,
   "dependencies": {
@@ -25,20 +26,21 @@
     "ng-mat-carousel": "^0.11.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.12",
     "@angular/cli": "~12.2.12",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.20",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "owasp-dependency-check": "0.0.18",
     "typescript": "~4.3.5"
   }
 }
