--- a/AgentApplication/agent/docker-compose.yaml
+++ b/AgentApplication/agent/docker-compose.yaml
@@ -1,4 +1,16 @@
 services:
+#  agent:
+#    build: .
+#    image: agent:0.0.1-SNAPSHOT
+#    restart: on-failure
+#    ports:
+#      - 8600:8080
+#    depends_on:
+#      - mysql
+#    env_file:
+#      - .env
+#    environment:
+#      DB_HOST: ${DB_HOST}
   mysql:
     image: mysql
     ports:
@@ -6,6 +18,7 @@ services:
     volumes:
       - dbdata:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+
 volumes:
   dbdata:
