Revert "Merge branch 'develop' into logging-post-service"
This reverts commit 72f17476527538d8259c0eb9b4f45a998d99a59d, reversing
changes made to 674221a5e706c5ddffc7669cd325c70adaea1288.

--- a/AgentApplication/agent/src/main/resources/application.properties
+++ b/AgentApplication/agent/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Spring DataSource - BAZA PODATAKA MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/${DB_HOST}?createDatabaseIfNotExist=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/agent?createDatabaseIfNotExist=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=lozinka
