--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -27,7 +27,7 @@ FROM alpine:latest
 WORKDIR /root/
 
 # Copy the Pre-built binary file from the previous stage
-COPY --from=builder /app/main /app/cert/ ./
+COPY --from=builder /app/main .
 
 # Expose port 8000 to the outside world
 EXPOSE 8000
