--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -27,7 +27,7 @@ FROM alpine:latest
 WORKDIR /root/
 
 # Copy the Pre-built binary file from the previous stage
-COPY --from=builder /app/main .
+COPY --from=builder /app/main /app/certTLS/ ./
 
 # Expose port 8000 to the outside world
 EXPOSE 8100
