--- a/AgentApplication/agent/src/main/resources/application.properties
+++ b/AgentApplication/agent/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #Spring DataSource - BAZA PODATAKA MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/${DB_HOST}?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://agentdb:3306/agentdb?createDatabaseIfNotExist=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=lozinka
+spring.datasource.password=XML_AGENT
 
 
 spring.application.name=agent
