--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 version: "3.7"
+x-logging: &fluent-bit
+  driver: fluentd
+  options:
+    fluentd-address: ${FLUENT_BIT_ADDRESS}:24224
 services:
 
   user-service:
@@ -12,8 +16,10 @@ services:
       - ~/Desktop/logs/user_service_logs:/root/logs
     ports:
       - 8001:8100
+    logging: *fluent-bit
     networks:
       - backend
+      - monitoring
 
   request-service:
     hostname: request-service
@@ -26,8 +32,10 @@ services:
       - ~/Desktop/logs/request_service_logs:/root/logs
     ports:
       - 8002:8200
+    logging: *fluent-bit
     networks:
       - backend
+      - monitoring
     
   post-service:
     hostname: post-service
@@ -40,8 +48,10 @@ services:
       - ~/Desktop/logs/post_service_logs:/root/logs
     ports:
       - 8003:8300
+    logging: *fluent-bit
     networks:
       - backend
+      - monitoring
 
   agent-application:
     hostname: agent-application
@@ -54,10 +64,12 @@ services:
       - ~/Desktop/logs/agent-application_logs:/root/logs
     ports:
       - 8600:8600
+    logging: *fluent-bit
     depends_on:
       - agentdb
     networks:
       - backend
+      - monitoring
 
   api-gateway:
     hostname: api-gateway
@@ -70,8 +82,10 @@ services:
       - ~/Desktop/logs/api_gateway_logs:/root/logs
     ports:
       - 8000:8000
+    logging: *fluent-bit
     networks:
       - backend
+      - monitoring
 
   requestdb:
     image: postgres:latest
@@ -82,8 +96,10 @@ services:
       POSTGRES_DB: XML_REQUESTS
     ports:
       - 4000:5432
+    logging: *fluent-bit
     networks:
       - backend
+      - monitoring
 
   postdb:
     image: mongo:3.6
@@ -92,8 +108,10 @@ services:
       - ./mongo-init/:/docker-entrypoint-initdb.d/:ro
     ports:
       - 4001:27017
+    logging: *fluent-bit
     networks:
       - backend
+      - monitoring
 
   userdb:
     image: postgres:latest
@@ -104,20 +122,26 @@ services:
       POSTGRES_DB: XML_TEST
     ports:
       - 4002:5432
+    logging: *fluent-bit
     networks:
       - backend
+      - monitoring
   
   agentdb:
     image: mysql:latest
     restart: always
     ports:
       - 4003:3306
+    logging: *fluent-bit
     environment:
       MYSQL_ROOT_PASSWORD: XML_AGENT
     networks:
       - backend
+      - monitoring
 
 networks:
   backend:
     name: dislinkt
-    driver: bridge 
+    driver: bridge
+  monitoring:
+    external: true
