--- a/AgentApplication/agent/src/main/resources/application.properties
+++ b/AgentApplication/agent/src/main/resources/application.properties
@@ -7,7 +7,12 @@ spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=XML_AGENT
-
+# JAEGER
+opentracing.jaeger.udp-sender.host=${JAEGER_DOMAIN:localhost}
+opentracing.jaeger.udp-sender.port=${JAEGER_PORT:6831}
+opentracing.jaeger.log-spans=true
+# ACTUATOR
+management.endpoints.web.exposure.include=health,info,prometheus
 
 spring.application.name=agent
 server.port=8600
