--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -38,42 +38,42 @@ services:
     networks:
       - monitoring
 
-#  jaeger:
-#    image: jaegertracing/all-in-one:1.34
-#    ports:
-#      - "9000:16686"
-#    networks:
-#      - monitoring
-#
-#  prometheus:
-#    image: prom/prometheus:v2.35.0
-#    restart: on-failure
-#    ports:
-#      - "9090:9090"
-#    volumes:
-#      - ./prometheus:/etc/prometheus
-#      - prometheus:/var/lib/prometheus
-#    networks:
-#      - monitoring
-#
-#  node-exporter:
-#    image: prom/node-exporter:v1.1.2
-#    ports:
-#      - "9100:9100"
-#    networks:
-#      - monitoring
-#
-#  cadvisor:
-#    image: google/cadvisor:v0.33.0
-#    ports:
-#      - "8080:8080"
-#    volumes:
-#      - /:/rootfs:ro
-#      - /var/run:/var/run:rw
-#      - /sys:/sys:ro
-#      - /var/lib/docker/:/var/lib/docker:ro
-#    networks:
-#      - monitoring
+  jaeger:
+    image: jaegertracing/all-in-one:1.34
+    ports:
+      - "9000:16686"
+    networks:
+      - monitoring
+
+  prometheus:
+    image: prom/prometheus:v2.35.0
+    restart: on-failure
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prometheus:/var/lib/prometheus
+    networks:
+      - monitoring
+
+  node-exporter:
+    image: prom/node-exporter:v1.1.2
+    ports:
+      - "9100:9100"
+    networks:
+      - monitoring
+
+  cadvisor:
+    image: google/cadvisor:v0.33.0
+    ports:
+      - "8080:8080"
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    networks:
+      - monitoring
 
 
 volumes:
