--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,6 +163,22 @@ services:
       - backend
       - monitoring
 
+  neo4j:
+    image: neo4j:latest
+    container_name: 'neo4j'
+    volumes:
+      - '$HOME/neo4j/data:/data'
+      - '$HOME/neo4j/conf/:/conf/'
+    ports:
+      - 7474:7474
+      - 7687:7687
+    restart: on-failure
+    logging: *fluent-bit
+    networks:
+      - backend
+      - monitoring
+    command: neo4j
+
 networks:
   backend:
     name: dislinkt
